--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,4 +1,10 @@
-profile.edit.title=\u30d7\u30ed\u30d5\u30a3\u30fc\u30eb
+profile.edit.title=\u30d7\u30ed\u30d5\u30a3\u30fc\u30eb\u7de8\u96c6
+contribute.title=\u6295\u7a3f\u5185\u5bb9
+contribute.day=\u672c\u65e5\u306e\u6295\u7a3f
+contribute.textTitle=\u6295\u7a3f\u30bf\u30a4\u30c8\u30eb
+contribute.face=\u672c\u65e5\u306e\u6c17\u6301\u3061
+contribute.text=\u4eca\u65e5\u4f55\u304c\u3042\u3063\u305f\uff1f
+contribute.complete=\u6295\u7a3f
 user.profile.btn=\u5b8c\u4e86
 user.profile.edit.btn=\u30d7\u30ed\u30d5\u30a3\u30fc\u30eb\u7de8\u96c6
 user.profile.new.btn=\u30d7\u30ed\u30d5\u30a3\u30fc\u30eb\u4f5c\u6210
@@ -9,3 +15,8 @@ birthday=\u8a95\u751f\u65e5
 male=\u7537\u6027
 female=\u5973\u6027
 gender=\u6027\u5225
+sogood=\u3068\u3066\u3082\u826f\u3044
+good=\u826f\u3044
+normal=\u666e\u901a
+bad=\u60aa\u3044
+sobad=\u3068\u3066\u3082\u60aa\u3044
